force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleUserInputValue__c/SOLXYZCSO001__ReportOutputRuleUserInputValue__c.object-meta.xml
<CustomObject>
    <label>帳票出力ルールユーザ入力値</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>帳票出力ルールユーザ入力値ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>