force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleUserInputValue__c/fields/SOLXYZCSO001__InputLabel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__InputLabel__c</fullName>
    <label>入力項目ラベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>