force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleUserInputValue__c/fields/SOLXYZCSO001__OverlayColumnID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayColumnID__c</fullName>
    <label>オーバレイ項目ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>