force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleUserInputValue__c/fields/SOLXYZCSO001__RequiredFlag__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RequiredFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>必須フラグ</label>
    <type>Checkbox</type>
</CustomField>